更新强制消单(现在还不能用)